deps/chakrashim/core/test/LetConst/defer2.baseline
SyntaxError: Assignment to const
	at code (defer2.js:9:9)
