deps/chakrashim/core/test/LetConst/defer2.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

function f() {
    function g() {
        const x = 1; 
        x = 2;
    } 
    g();
} 
f();